<resources>
    <string name="app_name">Weather</string>

    <string name="app_about">This is an application which contains all home works of Yandex.Mobilization 2017 project.</string>
    <string name="app_about_title">About Yamblz2017</string>

    <string name="action_weather">Weather</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="toggle_open_drawer">Open navigation drawer</string>
    <string name="toggle_close_drawer">Close navigation drawer</string>

    <string name="test_the_content">The Content</string>
    <string name="moscow">Moscow</string>
    <string name="feelslike">"Feels like "</string>

    <string name="pref_title_autoupdate">Auto-update</string>
    <string name="pref_title_autoupdate_interval">Auto-update interval</string>

    <string name="interval_entry_15_min">15 minuts</string>
    <string name="interval_entry_30_min">30 minuts</string>
    <string name="interval_entry_1_hour">1 hour</string>
    <string name="interval_entry_2_hours">2 hours</string>
    <string name="interval_entry_3_hours">3 hours</string>
    <string name="interval_entry_6_hours">6 hours</string>
    <string name="interval_entry_12_hours">12 hours</string>
    <string name="interval_entry_24_hours">24 hours</string>
    <string name="humidity">"Humidity "</string>
    <string name="windspeed">"Wind speed "</string>
    <string name="kph">kph</string>
    <string name="no_internet_error">Couldn\'t connect to server</string>

    <string name="celsius" translatable="false">°C</string>
    <string name="temp_day">Temperature in the afternoon</string>
    <string name="temp_night">Temperature at night</string>
    <string name="detail_description_placeholder">Weather description</string>
    <string name="select_city_text">Select city</string>
</resources>
